--- a/style.css
+++ b/style.css
@@ -141,6 +141,10 @@ footer li {
         text-align: left;
     }
 
+    .minecraft-section {
+        text-align: left;
+    }
+
     .Banner {
         width: 256px;
         height: 64px;
