--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
 * {
-    padding: 0%;
-    margin: 0%;
-}
-
-html, body {
-    min-height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 body {
     background-color: rgb(214, 214, 214);
     font-family: 'itcfont', Tahoma, Geneva, Verdana, sans-serif;
+    min-height: 100vh;
 }
 
 html::-webkit-scrollbar {
@@ -37,16 +34,13 @@ header {
     background: linear-gradient(15deg, rgba(149, 0, 255, 1) 5%, rgba(255, 0, 0, 1) 95%);
 }
 
-
 footer {
     color: #3f3f3f;
     text-align: center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding: 2rem;
     background-color: #b4b4b483;
-    top: 100%;
-    width: 100%;
     position: sticky;
+    top: 100%;
 }
 
 footer img {
@@ -117,19 +111,14 @@ footer li {
 
 .socials {
     text-align: center;
-    flex-direction: column;
     list-style: none;
-}
-
-.socials a {
-    margin: 10px;
 }
 
 .social-page-icons img {
     background-color: #cacaca;
     border-radius: 20%;
     padding: 25px;
-    margin: 20px 10px;
+    margin: 25px 30px;
     height: 150px;
     width: 150px;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
@@ -137,15 +126,15 @@ footer li {
 
 .social-page-icons img:hover {
     transform: scale(1.3);
-    box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.534);
     background-color: #b1b1b1;
 }
 
 @media (max-width: 800px) {
 
-    .long_logo img {
+    .long_logo {
         align-items: center;
-        width: 128px;
+        width: 256px;
         height: auto;
     }
 
