--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ footer li {
     color: #3f3f3f;
     text-align: left;
     padding: 2.5rem 15rem;
+    display: flex;
+    justify-content: center;
 }
 
 .container a {
@@ -69,12 +71,19 @@ footer li {
     color: rgb(0, 153, 255);
 }
 
+.banner-container {
+    display: flex;
+    justify-content: center;
+}
+
 .Banner {
+    
     width: 512px;
     height: 96px;
     object-fit: cover;
     border-radius: 20px;
     pointer-events: none;
+    margin: 1rem 1rem;
 }
 
 .long_logo {
@@ -83,10 +92,17 @@ footer li {
     pointer-events: none;
 }
 
+.pfp-container {
+    display: flex;
+    justify-content: center;
+}
+
 .pfp {
-    width: 64px;
+    width: auto;
+    height: 128px;
     border-radius: 100%;
     pointer-events: none;
+    margin: 3rem 1rem;
 }
 
 .nav {
@@ -134,6 +150,16 @@ footer li {
     font-size: 3rem;
 }
 
+.main {
+    margin: 5rem;
+    width: 100%;
+}
+
+.discord {
+    margin: 5rem;
+    width: 100%;
+}
+
 @media (max-width: 800px) {
 
     .long_logo {
@@ -150,6 +176,17 @@ footer li {
     .container {
         text-align: center;
         padding: 3rem 3rem;
+        display: block;
+    }
+
+    .main {
+        margin: 0.5rem;
+        width: 100%;
+    }
+    
+    .discord {
+        margin: 0.5rem;
+        width: 100%;
     }
 
     .about-me {
