--- a/style.css
+++ b/style.css
@@ -180,6 +180,13 @@ footer li {
     margin: 5rem;
 }
 
+h1 {
+    background: linear-gradient(90deg, rgba(149,0,255,1) 0%, rgba(255,0,0,1) 50%);
+    background-clip: text;
+    color: transparent;
+    animation: color-change 1s infinite;
+}
+
 @media (max-width: 800px) {
 
     .long_logo {
