--- a/style.css
+++ b/style.css
@@ -3,8 +3,34 @@
     margin: 0;
 }
 
+:root {
+    --text-color: #303030;
+    --background-color:  #d1d1d1;
+    --socials-color: #bdbdbd;
+    --socials-hover-color: #797979;
+    --socials-shadow: rgba(0, 0, 0, 0.534);
+    --footer-color: #b4b4b483;
+    --nav-color: rgb(226, 226, 226);
+    --darkmode-button: #474747; 
+    --darkmode-icon: #cacaca;
+    --darkmode-shadow: rgb(0, 0, 0);
+}
+
+.darkmode {
+    --text-color: #979797;
+    --background-color:  #1b1b1b;
+    --socials-color: #444;
+    --socials-hover-color: #585858;
+    --socials-shadow: rgba(255, 255, 255, 0.683);
+    --footer-color: rgb(43, 42, 42);
+    --nav-color: rgb(226, 226, 226);
+    --darkmode-button: #a8a8a8;
+    --darkmode-icon: #414141;
+    --darkmode-shadow: rgb(255, 255, 255);
+}
+
 body {
-    background-color: rgb(214, 214, 214);
+    background-color: var(--background-color);
     font-family: Tahoma, Geneva, Verdana, sans-serif;
     min-height: 100vh;
     font-size: 20px;
@@ -28,6 +54,17 @@ html::-webkit-scrollbar-track {
     opacity: 0;
 }
 
+a {
+    text-decoration: none;
+    cursor: pointer;
+    color: #007bff;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: rgb(0, 153, 255);
+}
+
 header {
     text-align: left;
     padding: 1rem 15rem;
@@ -36,10 +73,10 @@ header {
 }
 
 footer {
-    color: #353535;
+    color: var(--text-color);
     text-align: center;
     padding: 2rem;
-    background-color: #b4b4b483;
+    background-color: var(--footer-color);
     position: sticky;
     top: 100%;
 }
@@ -55,21 +92,45 @@ footer li {
 }
 
 .container {
-    color: #353535;
+    color: var(--text-color);
     padding: 0.5rem 10rem;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
-.container a {
-    color: #007bff;
-    text-decoration: none;
+.theme-switch {
+    height: 60px;
+    width: 60px;
+    border-radius: 100%;
+    padding: 0;
+    right: 1rem;
+    bottom: 1rem;
+    margin: 1rem;
+    border: 0px solid var(--darkmode-icon);
+    background-color: var(--darkmode-button);
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    box-shadow: 0 0 20px var(--darkmode-shadow);
 }
 
-.container a:hover {
-    text-decoration: underline;
-    color: rgb(0, 153, 255);
+.theme-switch svg {
+    fill: var(--darkmode-icon);
+}
+
+.theme-switch svg:last-child {
+    display: none;
+}
+
+.darkmode .theme-switch svg:first-child {
+    display: none;
+}
+
+.darkmode .theme-switch svg:last-child {
+    display: block;
 }
 
 .banner-container {
@@ -79,7 +140,7 @@ footer li {
 }
 
 .Banner {
-    
+
     width: 512px;
     height: 96px;
     object-fit: cover;
@@ -114,13 +175,15 @@ footer li {
 .nav a {
     padding: 1rem 1rem;
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: var(--nav-color);
+    border-radius: 25px;
 }
 
 .nav a:hover {
-    background-color: #11111121;
+    background-color: #00000021;
     color: rgb(0, 225, 255);
     border-radius: 25px;
+    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.534);
 }
 
 .ip {
@@ -134,7 +197,7 @@ footer li {
 }
 
 .social-page-icons img {
-    background-color: #cacaca;
+    background-color: var(--socials-color);
     border-radius: 20%;
     padding: 25px;
     margin: 25px 30px;
@@ -145,12 +208,8 @@ footer li {
 
 .social-page-icons img:hover {
     transform: scale(1.3);
-    box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.534);
-    background-color: #b1b1b1;
-}
-
-.socials h1 {
-    font-size: 3rem;
+    box-shadow: 0 0 20px 10px var(--socials-shadow);
+    background-color: var(--socials-color);
 }
 
 .main {
@@ -163,10 +222,6 @@ footer li {
     margin: 5rem;
     width: 100%;
     flex: 1;
-}
-
-body h1 {
-    font-size: 32px;
 }
 
 .privacy-policy {
@@ -186,10 +241,10 @@ body h1 {
 }
 
 h1 {
-    background: linear-gradient(90deg, rgba(149,0,255,1) 0%, rgba(255,0,0,1) 50%);
+    background: linear-gradient(90deg, rgba(149, 0, 255, 1) 0%, rgba(255, 0, 0, 1) 50%);
     background-clip: text;
     color: transparent;
-    animation: color-change 1s infinite;
+    font-size: 2.5rem;
 }
 
 @media (max-width: 800px) {
@@ -211,7 +266,7 @@ h1 {
     }
 
     h1 {
-        text-align: center;   
+        text-align: center;
     }
 
     .main {
@@ -270,40 +325,10 @@ h1 {
     .minecraft-section {
         margin: 1rem;
     }
-    
 
-}
-
-@media (prefers-color-scheme: dark) {
-    body {
-        background-color: #1b1b1b;
-        color: #e0e0e0;
+    .theme-switch {
+        margin: 3rem 0.1rem;
     }
 
-    footer {
-        color: #979797;
-        background-color: rgb(43, 42, 42);
-    }
 
-    .container {
-        color: #979797;
-    }
-
-    .social-page-icons img {
-        background-color: #444;
-        filter: brightness(0.9) contrast(1.2);
-    }
-
-    .social-page-icons img:hover {
-        background-color: #585858;
-        box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.683);
-    }
-
-    a {
-        color: #66aaff;
-    }
-
-    a:hover {
-        color: #aaccff;
-    }
 }
