--- a/style.css
+++ b/style.css
@@ -117,6 +117,11 @@ footer li {
     box-shadow: 0 0 20px var(--darkmode-shadow);
 }
 
+.system-theme {
+    display: none;
+}
+
+
 .theme-switch svg {
     fill: var(--darkmode-icon);
 }
