--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ footer li {
     object-fit: cover;
     border-radius: 20px;
     pointer-events: none;
-    margin: 1rem 1rem;
+    margin: 1rem;
 }
 
 .long_logo {
@@ -230,7 +230,7 @@ footer li {
 }
 
 .main {
-    margin: 5rem;
+    margin: 1rem 5rem;
     width: 100%;
     flex: 1;
 }
@@ -312,6 +312,13 @@ h1 {
     color: #007bff;
 }
 
+.schedule img {
+    width: 50vw;
+    height: auto;
+    border-radius: 25px;
+    margin: 1.5rem;
+}
+
 
 
 
@@ -346,6 +353,8 @@ h1 {
     .about-me {
         text-align: left;
         padding: 1rem;
+        font-size: 15px;
+        line-height: 20px;
     }
 
     .minecraft-section {
@@ -357,6 +366,8 @@ h1 {
         text-align: left;
         padding: 0.5rem;
         margin: 1rem;
+        font-size: 15px;
+        line-height: 25px;
     }
 
     .skills ul {
@@ -411,6 +422,8 @@ h1 {
     .minecraft-section {
         margin: 1rem;
         padding: 0;
+        font-size: 15px;
+        line-height: 25px;
     }
 
     .theme-switch {
@@ -431,5 +444,8 @@ h1 {
         font-size: 1.2rem;
     }
 
+    .schedule img {
+        width: 70vw;
+    }
 
 }
