--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@
 
 :root {
     --text-color: #303030;
-    --background-color: #d1d1d1;
+    --background-color: #c2c2c2;
     --socials-color: #bdbdbd;
     --socials-hover-color: #797979;
     --socials-shadow: rgba(0, 0, 0, 0.534);
-    --footer-color: #b4b4b483;
+    --footer-color: #d1d1d1;
     --nav-color: rgb(226, 226, 226);
     --darkmode-button: #474747;
     --darkmode-icon: #cacaca;
     --darkmode-shadow: rgb(0, 0, 0);
+    --border-color: rgba(0, 0, 0, 0.3);
 
     /* Font Sizes */
     --font-size-base: 1rem;
@@ -49,6 +50,7 @@
     --darkmode-button: #a8a8a8;
     --darkmode-icon: #414141;
     --darkmode-shadow: rgb(255, 255, 255);
+    --border-color: rgba(255, 255, 255, 0.3);
 }
 
 body {
@@ -108,9 +110,9 @@ header {
     background: linear-gradient(15deg, rgba(149, 0, 255, 0.25) 5%, rgba(255, 0, 0, 0.25) 95%);
     font-weight: bold;
     z-index: 2000;
-    border-radius: 7px;
+    border-radius: 0px 0px 7px 7px;
     border-style: solid;
-    border-width: 0px 2px 2px 2px;
+    border-width: 0px 0px 2px 0px;
     border-color: rgba(255, 255, 255, 0.75);
     backdrop-filter: blur(15px);
     /* filter: drop-shadow(0 0 15px rgba(0, 0, 0, 0.756)); */
@@ -125,6 +127,11 @@ footer {
     background-color: var(--footer-color);
     position: sticky;
     top: 100%;
+    box-shadow: 0 10px 25px black;
+    border-radius: 7px 7px 0px 0px;
+    border-style: solid;
+    border-width: 2px 0px 0px 0px;
+    border-color: rgba(255, 255, 255, 0.75);
 }
 
 footer img {
@@ -139,7 +146,7 @@ footer li {
 
 .container {
     color: var(--text-color);
-    padding: 10rem 5rem 1rem 5rem;
+    padding: 10rem 5rem 0rem 5rem;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
@@ -151,9 +158,11 @@ footer li {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    margin: 5rem 10rem;
+    margin: 3.5rem 10rem;
     border-radius: 50px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+    background-color: var(--footer-color);
+    border: 2px solid var(--border-color);
 }
 
 .mc-container {
@@ -165,6 +174,8 @@ footer li {
     margin: 5rem 10rem;
     border-radius: 50px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+    background-color: var(--footer-color);
+    border: 2px solid var(--border-color);
 }
 
 .theme-switch {
@@ -187,7 +198,6 @@ footer li {
 
 .theme-switch:hover {
     box-shadow: 0px 0px 75px var(--darkmode-shadow);
-    transform: scale(1.5);
 }
 
 .system-theme {
@@ -274,7 +284,7 @@ footer li {
 }
 
 .nav a {
-    padding: 1rem 1rem;
+    padding: 0.5rem 0.5rem;
     text-decoration: underline;
     color: var(--nav-color);
     border-radius: 25px;
@@ -338,21 +348,25 @@ footer li {
 }
 
 .main {
-    margin: 5rem 5rem;
+    margin: 2rem 5rem;
     width: 100%;
     flex: 1;
     padding: 2rem;
     border-radius: 50px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+    background-color: var(--footer-color);
+    border: 2px solid var(--border-color);
 }
 
 .discord {
-    margin: 5rem 5rem;
+    margin: 2rem 5rem;
     width: 100%;
     flex: 1;
     padding: 2rem;
     border-radius: 50px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+    background-color: var(--footer-color);
+    border: 2px solid var(--border-color);
 }
 
 .discordinvite {
@@ -413,14 +427,9 @@ h1 {
         text-align: center;
     }
 
-    .nav a {
-        padding: 1px;
-        font-size: 20px;
-    }
-
     .container {
         text-align: center;
-        padding: 8rem 2rem 1rem 2rem;
+        padding: 8rem 1rem 0rem 1rem;
     }
 
     .social-container {
@@ -440,13 +449,13 @@ h1 {
 
     .main {
         padding: 2rem 1rem 2rem 1rem;
-        margin: 0;
+        margin: 1rem 0rem 0rem 0rem;
         text-align: left;
     }
 
     .discord {
         padding: 1rem 1rem 2rem 1rem;
-        margin: 1rem 0;
+        margin: 1rem 0rem 0rem 0rem;
         text-align: left;
     }
 
